--- a/src/components/styleComponents/style.css
+++ b/src/components/styleComponents/style.css
@@ -1,3 +1,11 @@
-.container{
-    margin:100px;
+.container {
+  margin: 5% 10%;
+  box-sizing: border-box;
+	text-align: center;
+}
+
+img {
+  width: 100%;
+  max-width: 200px;
+  min-width: 120px;
 }
